# regionoix

./: .env.example  .gitignore  .sops.yaml  CONTRIBUTING.md  Cargo.toml  README.md  angular.json  eslint.config.js  flake.nix  package-lock.json  package.json  proxy.conf.json  shell.nix
.github/workflows/: check-backend.yaml  check-frontend.yaml  check-nix.yaml  deploy.yaml
backend/: Cargo.toml  benchmark.yml
backend/sql/: create.sql  drop.sql  insert.sql  trigger.sql
backend/src/: error.rs  lib.rs  main.rs  prelude.rs  secrets.rs  state.rs  utils.rs
backend/src/dtos/: address.rs  brand.rs  cart.rs  cart_line.rs  category.rs  discount.rs  mod.rs  order.rs  order_line.rs  product.rs  product_dto.rs  product_index.rs  region.rs  subcategory.rs  tag.rs  user_dto.rs
backend/src/entities/: address.rs  adress.rs  brand.rs  cart.rs  cart_line.rs  category.rs  discount.rs  mod.rs  order.rs  order_line.rs  prelude.rs  product.rs  product_category.rs  product_tag.rs  region.rs  sea_orm_active_enums.rs  stock.rs  sub_category.rs  tag.rs  user.rs
backend/src/repositories/: product_repository.rs  user_repository.rs
backend/src/routes/: auth.rs  basket.rs  brands.rs  categories.rs  discounts.rs  health.rs  mod.rs  orders.rs  products.rs  regions.rs  search.rs  tags.rs  users.rs
backend/src/routes/admin/: mod.rs  product.rs
backend/src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs  status.rs  utils.rs
backend/src/routes/basket/: count.rs  items.rs  mod.rs  order.rs
backend/src/routes/payment/: create_checkout_session.rs  mod.rs  stripe_webhook.rs
backend/src/services/: auth_service.rs  database.rs  meilisearch.rs  mod.rs  product_service.rs  s3.rs  stripe.rs
backend/src/tools/search_indexer/: main.rs  product_index.rs
nix/Raviole1/: configuration.nix  hardware-configuration.nix
nix/Raviole1/services/: backend.nix  beszel.nix  caddy.nix  default.nix  garage.nix  meilisearch.nix  postgres.nix  redis.nix  umami.nix  uptime-kuma.nix  web.nix
nix/pkgs/regionoix-backend/: default.nix
nix/pkgs/regionoix-frontend/: default.nix
nix/secrets/: Raviole1.yaml
scripts/: get-swagger.sh
src/: index.html  styles.css
src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts
src/app/models/: address-model.ts  basket-item-model.ts  basket-model.ts  payment-model.ts  product-model.ts  snackbar-state.ts  user-model.ts  user-status-model.ts
src/app/services/: auth-admin.ts  auth-cookie.ts  auth-guard.ts  auth-service.ts  auth-state-service.ts  basket-not-empty-guard.ts  basket-service.spec.ts  basket-service.ts  basket-state-service.ts  category-service.ts  no-auth-guard.ts  product-service.ts  products-service.ts  region-service.ts  snackbar-service.ts  (+1 more)
src/swaggers/: regionoix.json
(+95 files in other folders)
