[workspace]
members = ["backend"]
resolver = "2"

# --- Workspace Settings ---

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/GaspardCulis/regionoix"

[workspace.dependencies]
actix-web = "4"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }