[package]
name = "regionoix-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web = "4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
