[package]
name = "regionoix-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "regionoix-backend"

[lib]
name = "regionoix"
path = "src/lib.rs"

[[bin]]
name = "regionoix-backend"
path = "src/main.rs"

[[bin]]
name = "regionoix-indexer"
path = "src/tools/search_indexer/main.rs"

[dependencies]
actix-web = "4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = [
  "sqlx-postgres",
  "runtime-async-std-native-tls",
  "macros",
] }
anyhow = "1.0"
thiserror = "2.0"

argon2 = "0.5"
actix-session = { version = "0.11", features = ["redis-session"] }
actix-identity = "0.9"

tracing-actix-web = "0.7"
tracing = "0.1"
env_logger = "0.11"

utoipa = { version = "5.4", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
chrono = "0.4"

tokio = { version = "1.47", features = ["full"] }
meilisearch-sdk = "0.29"
